Overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@
     width: 100%;
     background-image: url(../IMAGES/_Hide\ &\ Seek_\ -\ Paper\ craft\ architecture\ photography.jpeg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
   }
   .green {
     opacity: 60%;
